Fix visibility of the impact hint on CCFs.

--- a/common/css/raster.css
+++ b/common/css/raster.css
@@ -1324,7 +1324,7 @@ for checklists and threat evaluations.
 	position: absolute;
 	width: 260px;
 	height: 300px;
-	left: 835px;
+	left: 530px;
 	top: 10px;
 	border: 3px solid grey;
 	background: whitesmoke;
